--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,6 +3,7 @@
   position: relative;
   background-color: black;
   width: 100%;
+  z-index: 10;
   @include respond((
     height: 57px null 130px,
   ));
