--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,3 +24,4 @@
 // PER PAGE COMPONENTS
 @import "components/home-hero";
 @import "components/home-illustration";
+@import "components/home-carousel";
