--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>{% block title %}Move On{% endblock %}</title>
+        <link rel="stylesheet" href="/styles/vendors.css" />
         <link rel="stylesheet" href="/styles/main.css" />
     </head>
     <body>
