--- a/src/templates/pages/index.twig
+++ b/src/templates/pages/index.twig
@@ -3,4 +3,5 @@
 {% block content %}
   {% include 'components/home-hero' %}
   {% include 'components/home-illustration' %}
+  {% include 'components/home-carousel' %}
 {% endblock %}
