--- a/src/styles/settings/_reset.scss
+++ b/src/styles/settings/_reset.scss
@@ -2,5 +2,5 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Roboto-Regular, sans-serif;
+  font-family: 'Roboto Regular', sans-serif;
 }
