--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,3 +25,4 @@
 @import "components/home-hero";
 @import "components/home-illustration";
 @import "components/home-carousel";
+@import "components/cta-grid";
