--- a/src/templates/pages/index.twig
+++ b/src/templates/pages/index.twig
@@ -4,4 +4,5 @@
   {% include 'components/home-hero' %}
   {% include 'components/home-illustration' %}
   {% include 'components/home-carousel' %}
+  {% include 'components/cta-grid' %}
 {% endblock %}
