--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,3 +26,4 @@
 @import "components/home-illustration";
 @import "components/home-carousel";
 @import "components/cta-grid";
+@import "components/testimonial";
