--- a/src/templates/pages/index.twig
+++ b/src/templates/pages/index.twig
@@ -5,4 +5,5 @@
   {% include 'components/home-illustration' %}
   {% include 'components/home-carousel' %}
   {% include 'components/cta-grid' %}
+  {% include 'components/testimonial' %}
 {% endblock %}
