--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,3 +27,4 @@
 @import "components/home-carousel";
 @import "components/cta-grid";
 @import "components/testimonial";
+@import "components/join";
