--- a/src/templates/pages/index.twig
+++ b/src/templates/pages/index.twig
@@ -6,4 +6,5 @@
   {% include 'components/home-carousel' %}
   {% include 'components/cta-grid' %}
   {% include 'components/testimonial' %}
+  {% include 'components/join' %}
 {% endblock %}
