--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@
 
 @import 'components/header';
 @import 'components/nav';
+@import 'components/footer';
 
 // PER PAGE COMPONENTS
 @import "components/home-hero";
