--- a/src/templates/components/footer.twig
+++ b/src/templates/components/footer.twig
@@ -30,6 +30,10 @@
         </div>
       </div>
       <div class="footer__nav__cta">
+        <div class="footer__nav__cta__copy">
+          GET INVOLVED <br>
+          Passionate about an issue?
+        </div>
         <a href="#">
           {% include 'components/svg' with {id: 'document-add'} only %}
           Start A Petition
@@ -45,13 +49,15 @@
       <div class="footer__text__item">
         MoveOn.org Civic Action is a 501(c)(4) organization which primarily focuses on nonpartisan education and advocacy on important national issues.
         <a href="#" class="footer__text__cta">
-          Donate to MoveOn Civic Action >
+          Donate to MoveOn Civic Action
+          {% include 'components/svg' with {id: 'caret-right'} only %}
         </a>
       </div>
       <div class="footer__text__item">
         MoveOn.org Political Action is a federal political committee which primarily helps members elect candidates who reflect our values through a variety of activities aimed at influencing the outcome of the next election.
         <a href="#" class="footer__text__cta">
-          Donate to MoveOn Civic Action >
+          Donate to MoveOn Civic Action
+          {% include 'components/svg' with {id: 'caret-right'} only %}
         </a>
       </div>
     </div>
