Petition Detail initial layout

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,3 +29,8 @@
 @import "components/cta-grid";
 @import "components/testimonial";
 @import "components/join";
+@import "components/petition-card";
+
+
+// PAGE STYLES
+@import "pages/petition";
