--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -1,7 +1,8 @@
 $white: #ffffff;
-$off-white: #F3F3F3;
+$off-white: #f3f3f3;
 $gray: #cacaca;
 $dark-gray: #222222;
 $black: #000000;
 $azure: #00abff;
+$light-blue: #99ddff;
 $ice-blue: #e5f5ff;
