--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,7 +30,7 @@
 @import "components/testimonial";
 @import "components/join";
 @import "components/petition-card";
-
+@import "components/petition-details";
 
 // PAGE STYLES
 @import "pages/petition";
