--- a/src/templates/pages/petition.twig
+++ b/src/templates/pages/petition.twig
@@ -5,6 +5,7 @@
 {% block content %}
   <div class="petition-info-column">
     {% include 'components/petition-card' %}
+    {% include 'components/petition-details' %}
   </div>
   <div class="petition-sign-column">
     {#  #}
