--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -1,6 +1,7 @@
 $white: #ffffff;
 $off-white: #f3f3f3;
 $gray: #cacaca;
+$slate-gray: #696a6a;
 $dark-gray: #222222;
 $black: #000000;
 $azure: #00abff;
