--- a/src/templates/pages/petition.twig
+++ b/src/templates/pages/petition.twig
@@ -8,6 +8,6 @@
     {% include 'components/petition-details' %}
   </div>
   <div class="petition-sign-column">
-    {#  #}
+    {% include 'components/sign-form' %}
   </div>
 {% endblock %}
