Sign form modal

--- a/src/templates/pages/petition.twig
+++ b/src/templates/pages/petition.twig
@@ -10,4 +10,8 @@
   <div class="petition-sign-column">
     {% include 'components/sign-form' %}
   </div>
+
+  {% include 'components/sign-form-modal' %}
+
+  <button class="sign-form__modal-toggle">Sign Now</button>
 {% endblock %}
