--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -3,7 +3,7 @@ form {
     position: relative;
     color: $light-gray;
     @include respond((
-      font-size: 12px 16px,
+      font-size: 14px null 16px,
       line-height: 20px,
     ));
 
@@ -17,11 +17,15 @@ form {
     &.active {
 
       label {
-        transform: scale(.8) translateY(-30px);
+        @include respond((
+          transform: (scale(.8) translateY(-40px)) null (scale(.8) translateY(-30px)),
+        ));
       }
 
       textarea ~ label {
-        transform: translateX(-24px) scale(.8) translateY(-40px);
+        @include respond((
+          transform: (scale(.8) translateX(-28px) translateY(-40px)) null (scale(.8) translateX(-28px) translateY(-40px)),
+        ));
       }
 
     }
@@ -37,28 +41,28 @@ form {
       @include respond((
         width: 100%,
         height: 50px null 30px,
-        border: (2px solid $azure) null 0,
-        border-bottom: null null (1px solid rgba(0, 0, 0, 0.42)),
+        border: 0,
+        border-bottom: (1px solid rgba(0, 0, 0, 0.42)) null,
       ));
     }
 
     label {
       position: absolute;
+      top: 0;
       left: 0;
       transition: all .3s;
       transform-origin: top left;
       @include respond((
-        display: null null flex,
+        display: flex,
         align-items: center,
-        top: -20px null 0,
-        height: null null 100%,
+        height: 100%,
       ));
     }
 
-    @include breakpoint(lg) {
-      :focus ~ label {
-        transform: scale(.8) translateY(-30px);
-      }
+    :focus ~ label {
+      @include respond((
+        transform: (scale(.8) translateY(-40px)) null (scale(.8) translateY(-30px)),
+      ));
     }
 
     select {
@@ -90,7 +94,9 @@ form {
       }
 
       &:focus ~ label {
-        transform: translateX(-24px) scale(.8) translateY(-40px);
+        @include respond((
+          transform: (scale(.8) translateX(-28px) translateY(-40px)) null (scale(.8) translateX(-28px) translateY(-40px)),
+        ));
       }
     }
 
