--- a/src/styles/components/_sign-form.scss
+++ b/src/styles/components/_sign-form.scss
@@ -32,4 +32,23 @@
       line-height: 34px,
     ));
   }
+
+  &__modal-toggle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 500;
+    background-color: $azure;
+    color: $white;
+    text-transform: uppercase;
+    @include font(roboto-condensed-bold);
+    @include respond((
+      font-size: 21px,
+    ));
+  }
 }
