--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,12 +17,14 @@
 @import 'components/buttons';
 @import 'components/lists';
 @import 'components/links';
+@import 'components/modal';
+@import 'components/form';
 
 @import 'components/header';
 @import 'components/nav';
 @import 'components/footer';
-@import 'components/form';
 @import 'components/sign-form';
+@import 'components/sign-form-modal';
 
 // PER PAGE COMPONENTS
 @import "components/home-hero";
