--- a/src/styles/components/_sign-form.scss
+++ b/src/styles/components/_sign-form.scss
@@ -34,7 +34,6 @@
   }
 
   &__modal-toggle {
-    display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -48,6 +47,7 @@
     text-transform: uppercase;
     @include font(roboto-condensed-bold);
     @include respond((
+      display: flex null none,
       font-size: 21px,
     ));
   }
