--- a/src/templates/pages/petition.twig
+++ b/src/templates/pages/petition.twig
@@ -13,5 +13,5 @@
 
   {% include 'components/sign-form-modal' %}
 
-  <button class="sign-form__modal-toggle">Sign Now</button>
+  <button class="sign-form__modal-toggle" data-modal="sign-form-modal">Sign Now</button>
 {% endblock %}
