--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -1,15 +1,21 @@
 .modal {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   z-index: 1000;
   width: 100vw;
   height: 100vh;
   background-color: rgba(255, 255, 255, 0.97);
+
+  &__frame {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    height: 100%;
+  }
 
   &__backdrop {
     position: absolute;
