--- a/src/templates/components/modal.twig
+++ b/src/templates/components/modal.twig
@@ -2,18 +2,21 @@
   class="modal {% block modal_class %}{% endblock %}"
   id="{% block modal_id %}{% endblock %}"
 >
-  <div class="modal__backdrop">
+  <div class="modal__backdrop"></div>
 
-  </div>
-  <div class="modal__dialog">
+  <div class="modal__frame">
+    <div class="modal__dialog">
 
-    <button class="modal__close">
-      {% include 'components/svg' with {id: 'times'} only %}
-    </button>
+      <button class="modal__close">
+        {% include 'components/svg' with {id: 'times'} only %}
+      </button>
 
-    <div class="modal__content">
-      {% block modal_content %}
-      {% endblock %}
+      <div class="modal__content">
+        {% block modal_content %}
+        {% endblock %}
+      </div>
+
     </div>
   </div>
+
 </div>
