Most recent signers modal

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,8 @@
 @import 'components/footer';
 @import 'components/sign-form';
 @import 'components/sign-form-modal';
+@import 'components/signers';
+@import 'components/signers-modal';
 
 // PER PAGE COMPONENTS
 @import "components/home-hero";
