--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -28,10 +28,19 @@
   }
 
   &__dialog {
-    padding: 60px 42px;
     position: relative;
+    width: 100%;
     max-height: 100%;
     overflow-y: auto;
+    @include respond((
+      padding: (60px 42px) null (200px percentage(230px/$bp-xl) 60px),
+    ));
+  }
+
+  &__content {
+    max-width: 980px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__close {
@@ -40,17 +49,17 @@
     align-items: center;
     position: absolute;
     @include respond((
-      width: 18px,
-      height: 18px,
-      top: 12px,
-      right: 22px,
+      width: 18px null 44px,
+      height: 18px null 44px,
+      top: 12px null 74px,
+      right: 22px null 80px,
     ));
 
     svg {
       fill: $azure;
       @include respond((
-        width: 16px,
-        height: 16px,
+        width: 16px null 44px,
+        height: 16px null 44px,
       ));
     }
   }
