--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@
 @import 'components/sign-form-modal';
 @import 'components/signers';
 @import 'components/signers-modal';
+@import 'components/share-modal';
 
 // PER PAGE COMPONENTS
 @import "components/home-hero";
