--- a/src/templates/pages/petition.twig
+++ b/src/templates/pages/petition.twig
@@ -12,6 +12,7 @@
   </div>
 
   {% include 'components/sign-form-modal' %}
+  {% include 'components/share-modal' %}
 
   <button class="sign-form__modal-toggle" data-modal="sign-form-modal">Sign Now</button>
 {% endblock %}
