Sign form color transitions

--- a/src/styles/pages/_petition.scss
+++ b/src/styles/pages/_petition.scss
@@ -21,5 +21,9 @@
       display: none null block,
       margin-left: null null percentage(121/1180)
     ));
+
+    .sign-form {
+      margin-top: 79px;
+    }
   }
 }
