--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -38,12 +38,25 @@ form {
       font-family: inherit;
       line-height: inherit;
       color: inherit;
+      transition: all .3s;
       @include respond((
         width: 100%,
         height: 50px null 30px,
         border: 0,
         border-bottom: (1px solid rgba(0, 0, 0, 0.42)) null,
       ));
+
+      &:focus {
+        color: $azure;
+        border-bottom-color: $azure;
+      }
+
+      &:focus ~ label {
+        color: $azure;
+        @include respond((
+          transform: (scale(.8) translateY(-40px)) null (scale(.8) translateY(-30px)),
+        ));
+      }
     }
 
     label {
@@ -56,12 +69,6 @@ form {
         display: flex,
         align-items: center,
         height: 100%,
-      ));
-    }
-
-    :focus ~ label {
-      @include respond((
-        transform: (scale(.8) translateY(-40px)) null (scale(.8) translateY(-30px)),
       ));
     }
 
@@ -86,6 +93,7 @@ form {
       line-height: inherit;
       color: inherit;
       padding: 5px;
+      transition: all .3s;
 
       & ~ label {
         top: 13px;
@@ -93,7 +101,13 @@ form {
         height: auto;
       }
 
+      &:focus {
+        color: $azure;
+        border-color: $azure;
+      }
+
       &:focus ~ label {
+        color: $azure;
         @include respond((
           transform: (scale(.8) translateX(-28px) translateY(-40px)) null (scale(.8) translateX(-28px) translateY(-40px)),
         ));
@@ -113,4 +127,12 @@ form {
       ));
     }
   }
+}
+
+
+// Remove outline
+input,
+select,
+textarea {
+  outline: none;
 }
