Donate form initial markup and styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,8 @@
 @import "components/join";
 @import "components/petition-card";
 @import "components/petition-details";
+@import "components/donate-terms";
 
 // PAGE STYLES
 @import "pages/petition";
+@import "pages/donate";
