--- a/src/templates/components/sign-form.twig
+++ b/src/templates/components/sign-form.twig
@@ -20,12 +20,12 @@
   </div>
 
   <div class="input-block">
-    <input type="text" name="text" id="address" name="address">
+    <input type="text" id="address" name="address">
     <label for="address">Address</label>
   </div>
 
   <div class="input-block">
-    <input type="text" name="text" id="city" name="city">
+    <input type="text" id="city" name="city">
     <label for="city">City</label>
   </div>
 
@@ -39,7 +39,7 @@
   </div>
 
   <div class="input-block">
-    <input type="text" name="zip" id="zip" name="zip">
+    <input type="text" name="zip" id="zip">
     <label for="zip">ZIP</label>
   </div>
 
