Donate form desktop styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,7 @@
 @import "components/join";
 @import "components/petition-card";
 @import "components/petition-details";
+@import "components/donate-form";
 @import "components/donate-terms";
 
 // PAGE STYLES
