--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,4 +1,6 @@
 form {
+
+
   .input-block {
     position: relative;
     color: $light-gray;
@@ -37,17 +39,15 @@ form {
       font-size: inherit;
       font-family: inherit;
       line-height: inherit;
-      color: inherit;
       transition: all .3s;
       @include respond((
         width: 100%,
         height: 50px null 30px,
         border: 0,
-        border-bottom: (1px solid rgba(0, 0, 0, 0.42)) null,
+        border-bottom: (2px solid rgba(0, 0, 0, 0.42)) null,
       ));
 
       &:focus {
-        color: $azure;
         border-bottom-color: $azure;
       }
 
@@ -91,7 +91,6 @@ form {
       font-size: inherit;
       font-family: inherit;
       line-height: inherit;
-      color: inherit;
       padding: 5px;
       transition: all .3s;
 
@@ -127,6 +126,145 @@ form {
       ));
     }
   }
+
+
+  // INPUT HELPER
+  .input-helper {
+    display: block;
+    margin-top: 7px;
+    opacity: .54;
+    @include font(roboto);
+    @include respond((
+      font-size: 13px,
+      line-height: 20px,
+    ));
+  }
+
+
+  // RADIO
+  .radio-input {
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: 28px;
+    margin-right: 20px;
+
+    input[type=radio] {
+      appearance: none;
+      -webkit-appearance: none;
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      vertical-align: top;
+      border: 2px solid #010101;
+      opacity: .54;
+      border-radius: 50%;
+      transition: all .3s;
+      position: relative;
+      box-shadow: inset 0 0 0 20px $white;
+      background-color: $azure;
+
+      &:checked {
+        border-color: $azure;
+        opacity: 1;
+        box-shadow: inset 0 0 0 3px $white;
+      }
+    }
+
+    label {
+      @include font(roboto);
+      @include respond((
+        margin-left: 10px,
+        font-size: 16px,
+        line-height: 1,
+      ));
+    }
+
+    & input[type="text"],
+    & input[type="number"] {
+      appearance: none;
+      -webkit-appearance: none;
+      width: 200px;
+      height: 50px;
+      border: 1px solid rgba(0,0,0,.54);
+      padding: 0 10px;
+      color: rgba(0,0,0,.54);
+      margin-left: 8px;
+      @include respond((
+        font-size: 16px,
+        line-height: 20px,
+      ));
+    }
+  }
+
+
+  // CHECKBOX
+  .checkbox-input {
+    display: flex;
+    align-items: top;
+    margin-bottom: 28px;
+    margin-right: 20px;
+    margin-top: 28px;
+
+    input[type=checkbox] {
+      appearance: none;
+      -webkit-appearance: none;
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      vertical-align: top;
+      border: 2px solid #010101;
+      opacity: .54;
+      transition: all .3s;
+      position: relative;
+      background-color: $white;
+      flex-shrink: 0;
+
+      &:checked {
+        border-color: $azure;
+        background-color: $azure;
+        opacity: 1;
+      }
+
+      &::after {
+        content: '✓';
+        display: block;
+        font-size: 1.5em;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: $white;
+      }
+    }
+
+    label {
+      color: rgba(0,0,0,0.54);
+      @include font(roboto);
+      @include respond((
+        margin-left: 10px,
+        font-size: 16px,
+        line-height: 24px,
+      ));
+    }
+
+    & input[type="text"],
+    & input[type="number"] {
+      appearance: none;
+      -webkit-appearance: none;
+      width: 200px;
+      height: 50px;
+      border: 1px solid rgba(0,0,0,.54);
+      padding: 0 10px;
+      color: rgba(0,0,0,.54);
+      margin-left: 8px;
+      @include respond((
+        font-size: 16px,
+        line-height: 20px,
+      ));
+    }
+  }
+
+
 }
 
 
