Donate page completed step state

--- a/src/templates/components/donate-form.twig
+++ b/src/templates/components/donate-form.twig
@@ -7,7 +7,7 @@
 
     {# STEP 1 #}
     <div class="donate-form__step">
-      <div class="donate-form__step__numeral">1</div>
+      <div class="donate-form__step__numeral"><span>1</span></div>
       <div class="donate-form__step__heading"><span>Donation Amount</span></div>
       <div class="donate-form__step__subheading">
         How much would you like to donate?
@@ -48,7 +48,7 @@
 
     {# STEP 2 #}
     <div class="donate-form__step">
-      <div class="donate-form__step__numeral">2</div>
+      <div class="donate-form__step__numeral"><span>2</span></div>
       <div class="donate-form__step__heading"><span>Personal Info</span></div>
       <div class="donate-form__step__subheading">
         Tell us a bit about you.
@@ -82,7 +82,7 @@
 
     {# STEP 3 #}
     <div class="donate-form__step">
-      <div class="donate-form__step__numeral">3</div>
+      <div class="donate-form__step__numeral"><span>3</span></div>
       <div class="donate-form__step__heading"><span>Billing Info</span></div>
       <div class="donate-form__step__subheading">
         How would you like to pay?
