--- a/src/styles/components/_donate-form.scss
+++ b/src/styles/components/_donate-form.scss
@@ -49,6 +49,22 @@
       @include respond((
         font-size: 28px,
       ));
+
+      &::after {
+        content: '✓';
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        font-size: 28px;
+        color: $white;
+        transition: all .3s;
+      }
+
+      span {
+        transition: all .3s;
+      }
     }
 
     &__heading {
@@ -159,3 +175,31 @@
     ));
   }
 }
+
+
+
+// STEP STATES
+.donate-form__step {
+
+  &:not(.active) {
+    pointer-events: none;
+  }
+
+
+  // COMPLETED STEP STATE
+  &.completed {
+
+    .donate-form__step__numeral {
+      &::after {
+        transform: translate(-50%, -50%) scale(1);
+      }
+
+      span {
+        transform: scale(0);
+      }
+    }
+
+  }
+
+}
+
