Auto select first slide

--- a/src/styles/components/_home-carousel.scss
+++ b/src/styles/components/_home-carousel.scss
@@ -68,7 +68,8 @@
       }
     }
 
-    &:hover {
+    &:hover,
+    &.is-selected {
       .home-carousel__slide-content {
         opacity: 1;
       }
