Donate page version 1 styles

--- a/src/styles/components/_donate-form.scss
+++ b/src/styles/components/_donate-form.scss
@@ -177,6 +177,17 @@
 }
 
 
+// CREDIT CARD FIELDS
+.donate-form__cc__fields {
+  margin-top: 24px;
+
+  &:not(.visible) {
+    display: none;
+  }
+}
+
+
+
 
 // STEP STATES
 .donate-form__step {
