--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,8 +39,10 @@
 @import "components/petition-card";
 @import "components/petition-details";
 @import "components/donate-form";
+@import "components/donate-form-v1";
 @import "components/donate-terms";
 
 // PAGE STYLES
 @import "pages/petition";
 @import "pages/donate";
+@import "pages/donate-v1";
