--- a/src/templates/components/donate-form.twig
+++ b/src/templates/components/donate-form.twig
@@ -6,43 +6,50 @@
   <div class="donate-form__steps">
 
     {# STEP 1 #}
-    <div class="donate-form__step">
+    <div class="donate-form__step active">
       <div class="donate-form__step__numeral"><span>1</span></div>
       <div class="donate-form__step__heading"><span>Donation Amount</span></div>
-      <div class="donate-form__step__subheading">
-        How much would you like to donate?
+      <div class="donate-form__step__content">
+        <div class="donate-form__step__subheading">
+          How much would you like to donate?
+        </div>
+        <div class="donate-form__fields">
+          <div class="radio-input">
+            <input type="radio" name="amount" id="amount-$25" value="$25">
+            <label for="amount-$25">$25</label>
+          </div>
+          <div class="radio-input">
+            <input type="radio" name="amount" id="amount-$50" value="$50">
+            <label for="amount-$50">$50</label>
+          </div>
+          <div class="radio-input">
+            <input type="radio" name="amount" id="amount-$100" value="$100">
+            <label for="amount-$100">$100</label>
+          </div>
+          <div class="radio-input">
+            <input type="radio" name="amount" id="amount-$200" value="$200">
+            <label for="amount-$200">$200</label>
+          </div>
+          <div class="radio-input">
+            <input type="radio" name="amount" id="amount-$400" value="$400">
+            <label for="amount-$400">$400</label>
+          </div>
+          <div class="radio-input">
+            <input type="radio" name="amount" id="amount-other" value="other">
+            <label for="amount-other">Other $</label>
+            <input type="number" name="other-amount" placeholder="Enter your own amount">
+          </div>
+          <div class="checkbox-input">
+            <input type="checkbox" name="recurring" id="recurring">
+            <label for="recurring">Make a recurring monthly donation</label>
+          </div>
+          <div class="donate-form__actions">
+            <button class="btn donate-form__action--solid" disabled>Continue</button>
+            <button class="btn donate-form__action--flat">Cancel</button>
+          </div>
+        </div>
       </div>
-      <div class="donate-form__fields">
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$25" value="$25">
-          <label for="amount-$25">$25</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$50" value="$50">
-          <label for="amount-$50">$50</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$100" value="$100">
-          <label for="amount-$100">$100</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$200" value="$200">
-          <label for="amount-$200">$200</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$400" value="$400">
-          <label for="amount-$400">$400</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-other" value="other">
-          <label for="amount-other">Other $</label>
-          <input type="number" name="other-amount" placeholder="Enter your own amount">
-        </div>
-        <div class="checkbox-input">
-          <input type="checkbox" name="recurring" id="recurring">
-          <label for="recurring">Make a recurring monthly donation</label>
-        </div>
-      </div>
+      <div class="donate-form__completed-summary">Selected Amount $200</div>
     </div>
 
 
@@ -50,32 +57,34 @@
     <div class="donate-form__step">
       <div class="donate-form__step__numeral"><span>2</span></div>
       <div class="donate-form__step__heading"><span>Personal Info</span></div>
-      <div class="donate-form__step__subheading">
-        Tell us a bit about you.
-      </div>
-      <div class="donate-form__fields">
-        <div class="input-block">
-          <input type="text" name="name" id="name">
-          <label for="name">Name</label>
+      <div class="donate-form__step__content">
+        <div class="donate-form__step__subheading">
+          Tell us a bit about you.
         </div>
-        <div class="input-helper">As it appears on your credit card</div>
-        <div class="input-block">
-          <input type="email" name="email" id="email">
-          <label for="email">Email</label>
+        <div class="donate-form__fields">
+          <div class="input-block">
+            <input type="text" name="name" id="name">
+            <label for="name">Name</label>
+          </div>
+          <div class="input-helper">As it appears on your credit card</div>
+          <div class="input-block">
+            <input type="email" name="email" id="email">
+            <label for="email">Email</label>
+          </div>
+          <div class="checkbox-input">
+            <input type="checkbox" name="unemployed" id="unemployed">
+            <label for="unemployed">I am retired or unemployed</label>
+          </div>
+          <div class="input-block">
+            <input type="text" name="employer" id="employer">
+            <label for="employer">Employer</label>
+          </div>
+          <div class="input-block">
+            <input type="text" name="occupation" id="occupation">
+            <label for="occupation">Occupation</label>
+          </div>
+          <div class="input-helper">Employer and occupation are required by federal law.</div>
         </div>
-        <div class="checkbox-input">
-          <input type="checkbox" name="unemployed" id="unemployed">
-          <label for="unemployed">I am retired or unemployed</label>
-        </div>
-        <div class="input-block">
-          <input type="text" name="employer" id="employer">
-          <label for="employer">Employer</label>
-        </div>
-        <div class="input-block">
-          <input type="text" name="occupation" id="occupation">
-          <label for="occupation">Occupation</label>
-        </div>
-        <div class="input-helper">Employer and occupation are required by federal law.</div>
       </div>
     </div>
 
@@ -84,29 +93,63 @@
     <div class="donate-form__step">
       <div class="donate-form__step__numeral"><span>3</span></div>
       <div class="donate-form__step__heading"><span>Billing Info</span></div>
-      <div class="donate-form__step__subheading">
-        How would you like to pay?
-      </div>
-      <div class="donate-form__fields">
-        <div>
-          <div class="radio-input">
-            <input type="radio" name="payment" id="credit-card" value="credit-card">
-            <label for="credit-card">Credit Card</label>
-          </div>
-          <div class="radio-input">
-            <input type="radio" name="payment" id="paypal" value="paypal">
-            <label for="paypal">PayPal</label>
-          </div>
-          <p class="donate-form__paycheck-option">Or <a href="#">pay with a paycheck</a></p>
+      <div class="donate-form__step__content">
+        <div class="donate-form__step__subheading">
+          How would you like to pay?
         </div>
-        <div class="checkbox-input">
-          <input type="checkbox" name="save" id="save">
-          <label for="save">Please save my information for future donation transactions.</label>
+        <div class="donate-form__fields">
+          <div>
+            <div class="radio-input">
+              <input type="radio" name="payment" id="credit-card" value="credit-card">
+              <label for="credit-card">Credit Card</label>
+            </div>
+            <div class="radio-input">
+              <input type="radio" name="payment" id="paypal" value="paypal">
+              <label for="paypal">PayPal</label>
+            </div>
+            <p class="donate-form__paycheck-option">Or <a href="#">pay with a paycheck</a></p>
+          </div>
+          {# CC FIELDS START #}
+          <div class="donate-form__cc__fields">
+            <div class="input-block">
+              <input type="text" name="cc-number" id="cc-number">
+              <label for="cc-number">Credit Card Number</label>
+            </div>
+            <div class="input-block">
+              <input type="text" name="cc-expiration" id="cc-expiration">
+              <label for="cc-expiration">Expiration Date</label>
+            </div>
+            <div class="input-block">
+              <input type="text" name="cc-billing" id="cc-billing">
+              <label for="cc-billing">Billing Address</label>
+            </div>
+            <div class="input-block">
+              <input type="text" name="cc-city" id="cc-city">
+              <label for="cc-city">City</label>
+            </div>
+            <div class="input-block">
+              <select name="cc-state" id="cc-state">
+                <option value="" selected></option>
+                {% include 'components/states-code-options' %}
+              </select>
+              {% include 'components/svg' with {class: 'select-caret', id: 'caret-down'} only %}
+              <label for="cc-state">State</label>
+            </div>
+            <div class="input-block">
+              <input type="text" name="cc-zip" id="cc-zip">
+              <label for="cc-zip">ZIP</label>
+            </div>
+          </div>
+          {# CC FIELDS END #}
+          <div class="checkbox-input">
+            <input type="checkbox" name="save" id="save">
+            <label for="save">Please save my information for future donation transactions.</label>
+          </div>
+          <button type="submit" class="donate-form__submit" disabled>Contribute</button>
+          <p class="donate-form__agreement">
+            By clicking contribute, I confirm that I have read all of the rules below and I certify that I comply with each of them.
+          </p>
         </div>
-        <button type="submit" class="donate-form__submit" disabled>Contribute</button>
-        <p class="donate-form__agreement">
-          By clicking contribute, I confirm that I have read all of the rules below and I certify that I comply with each of them.
-        </p>
       </div>
     </div>
 
