--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -226,7 +226,7 @@ form {
       }
 
       &::after {
-        content: '✓';
+        content: '';
         display: block;
         font-size: 1.5em;
         position: absolute;
@@ -234,6 +234,12 @@ form {
         left: 50%;
         transform: translate(-50%, -50%);
         color: $white;
+        width: 100%;
+        height: 100%;
+        background-image: url("/images/icons/check.svg");
+        background-repeat: no-repeat;
+        background-size: 80%;
+        background-position: center;
       }
     }
 
