Donate confirm page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,6 +41,7 @@
 @import "components/donate-form";
 @import "components/donate-form-v1";
 @import "components/donate-terms";
+@import "components/donate-confirm";
 
 // PAGE STYLES
 @import "pages/petition";
