--- a/src/templates/components/header.twig
+++ b/src/templates/components/header.twig
@@ -28,9 +28,9 @@
           </button>
         </a>
         <ul class="nav__primary__subnav">
-          <li><a href="#">Sublink</a></li>
-          <li><a href="#">Sublink</a></li>
-          <li><a href="#">Sublink</a></li>
+          <li><a href="#">Sublink 2</a></li>
+          <li><a href="#">Sublink 2</a></li>
+          <li><a href="#">Sublink 2</a></li>
         </ul>
       </li>
       <li><a href="/">Events</a></li>
